--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 python-telegram-bot==20.7
-requests
-supabase
-python-dotenv
+requests==2.31.0
+python-dotenv==1.0.1
+supabase==1.0.3
 httpx==0.24.1
 httpcore==0.16.3
