--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 python-telegram-bot==20.7
 requests==2.31.0
 python-dotenv==1.0.1
-supabase==1.0.3
+supabase-py==0.2.5
+cloudinary==1.36.0
 httpx==0.24.1
-httpcore==0.16.3
