--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 python-telegram-bot==20.0
 requests==2.31.0
 python-dotenv==1.0.1
-supabase-py
 cloudinary==1.36.0
 httpx==0.24.1
+postgrest-py==0.10.6
